--- a/style.css
+++ b/style.css
@@ -16,9 +16,9 @@ body{font-family: 'Montserrat', sans-serif;}
     display: flex;
     justify-content: space-between;
     align-items: center;
+    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.1);
     padding: 1rem 2rem;
     z-index: 1;
-    backdrop-filter: blur(50px);/**/
 }
 
 .header a{
@@ -78,7 +78,7 @@ body{font-family: 'Montserrat', sans-serif;}
 }
 
 .section h1{
-    font-size: clamp(60px, 8vw, 200px);
+    font-size: clamp(50px, 6vw, 140px);
     font-family: 'Titillium Web', sans-serif;
     font-weight: 700;
     line-height: 3vw;
@@ -97,12 +97,47 @@ body{font-family: 'Montserrat', sans-serif;}
 
 .section p{padding: 1rem 1rem 0 0;}
 
-.hero-section img{width: clamp(350px, 40vw, 600px);}
+.hero-section img{width: clamp(300px, 35vw, 550px);}
 
 /* Second Section */
-.sec-col{
-    width: clamp(300px, 50vw, 600px)
+.sec-section{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 40px 0;
 }
+
+.sec-section .sec-col{
+    position: relative;
+    height: 360px;
+    width: 350px;
+    background-color: #fff;
+    border-radius: 30px;
+    box-shadow: -5px -5px 20px #fff,
+     5px 5px 20px #babecc;
+}
+
+.sec-col .title h1{
+    font-size: 2.4em;
+    padding: 10px;
+    text-shadow: 2px 2px 10px #222, -2px -2px 10px #f2f2f2;
+}
+
+.sec-col .title h2{
+    font-size: 1.4em;
+}
+
+.sec-col img{
+    width: 170px;
+    position: absolute;
+    top: -50px;
+    right: -50px;
+}
+
+/* benefit p styles*/
+.content{padding: 0 20px;}
+.content p{line-height: 30px;opacity: 0.6;padding-top: 20px;}
 
 /* Wave styles from "shapedivider.app" */
 .custom-shape-divider-bottom-1601122402 {
@@ -126,6 +161,75 @@ body{font-family: 'Montserrat', sans-serif;}
     fill: #FFFFFF;
 }
 
+/* Footer */
+.footer{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #607D8B;
+    height: 200px;
+    padding: 1rem 2rem;
+    z-index: 1;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%239C92AC' fill-opacity='0.4'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+}
+
+/* second wave*/
+.custom-shape-divider-top-1601157215 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+}
+
+.custom-shape-divider-top-1601157215 svg {
+    position: relative;
+    display: block;
+    width: calc(141% + 1.3px);
+    height: 69px;
+}
+
+.custom-shape-divider-top-1601157215 .shape-fill {
+    fill: #FFFFFF;
+}
+
+/** For mobile devices **/
+@media (max-width: 767px) {
+    .custom-shape-divider-top-1601157215 svg {
+        width: calc(141% + 1.3px);
+        height: 40px;
+    }
+}
+
+.footer h1{text-align: center;}
+
+.footer a{
+    text-decoration: none;
+    color: #111111;
+    font-size: 2rem;
+    background-color: #607D8B;
+}
+
+.footer-items{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-items a{
+    font-size: 1rem;
+    padding: 0.4em 0.8em;
+    border-radius: 20px;
+    margin: 5px;
+    transition: background 0.3s ease-in-out;
+}
+
+.footer-items a:hover{background-color: #f2f2f2;}
+
 /* For tablet devices */
 @media (max-width: 1023px){
     .section{
@@ -145,8 +249,6 @@ body{font-family: 'Montserrat', sans-serif;}
     }
 
     .header .logo{font-size: 1.5rem;}
-
-    .sec-section{height: 100vh;}
 
     .menu-btn{display: flex;}
 
@@ -177,6 +279,13 @@ body{font-family: 'Montserrat', sans-serif;}
 
     .menu-items a:hover{background-color: #607D8B;}
 
+    .sec-section{
+        flex-direction: column;
+        height: auto;
+        padding: 80px 0;
+    }
+
+    .sec-col{margin-top: 80px;}
 }
 
 /* For mobile devices */
