--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 
-body{font-family: 'Montserrat', sans-serif;}
+body{font-family: 'Montserrat', sans-serif;width: 100%;}
 
 /* Header */
 .header{
