--- a/iframe.css
+++ b/iframe.css
@@ -14,9 +14,9 @@ body{
 }
 
 iframe{
-    scroll-behavior: unset;
     height: 85vh;
     width: 85vw;
+    border: none;
     border-radius: 30px;
     box-shadow: 0 10px 22px rgba(0, 0, 0, 0.09), 0 10px 10px rgba(0, 0, 0, 0.09);
 }
