--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ body{font-family: 'Montserrat', sans-serif;width: 100%;}
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.1);
+    background-color: #607D8B;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%239C92AC' fill-opacity='0.4'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
     padding: 1rem 2rem;
     z-index: 1;
 }
